bugfix/ETD-1441-connectors-coinmate-api-trying-